--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,6 +5,14 @@
 <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase-database.js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-117546592-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-117546592-1');
+</script>
 <script src="../js/all.min.js"></script>
 <script src="../js/main.js"></script>
 
