Adds position anchor to index

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="content white-ribbon">
-        <h2 class="content-head is-center">Where are we?</h2>
+        <h2 class="content-head is-center" id="position" >Where are we?</h2>
         <div id="map"></div>
         <div class="seperator"></div>
     </div>
