Adds web manifester to application

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,5 +13,20 @@
     <link rel="stylesheet" href="/css/grids-responsive-min.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/fontello-embedded.css">
+    
+    <link rel="manifest" href="./manifest.json">
+
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Shepherd Moon">
+    <meta name="apple-mobile-web-app-title" content="Shepherd Moon">
+    <meta name="theme-color" content="#466083">
+    <meta name="msapplication-navbutton-color" content="#466083">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="msapplication-starturl" content="/#position">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="icon" sizes="3164x3164" href="./imgs/img-logo.png">
+    <link rel="apple-touch-icon" sizes="3164x3164" href="./imgs/img-logo.png">
 </head>
 <body>
